@@ -30,29 +30,86 @@ name|class
 name|QVariant
 decl_stmt|;
 end_decl_stmt
-begin_decl_stmt
+begin_expr_stmt
+name|template
+operator|<
 name|class
-name|QPointerBase
+name|T
+operator|>
+name|class
+name|QPointer
 block|{
+name|template
+operator|<
+name|typename
+name|U
+operator|>
+expr|struct
+name|TypeSelector
+block|{
+typedef|typedef
+name|QObject
+name|Type
+typedef|;
+block|}
+expr_stmt|;
+end_expr_stmt
+begin_expr_stmt
+name|template
+operator|<
+name|typename
+name|U
+operator|>
+expr|struct
+name|TypeSelector
+operator|<
+specifier|const
+name|U
+operator|>
+block|{
+typedef|typedef
+specifier|const
+name|QObject
+name|Type
+typedef|;
+block|}
+end_expr_stmt
+begin_empty_stmt
+empty_stmt|;
+end_empty_stmt
+begin_typedef
+typedef|typedef
+name|typename
+name|TypeSelector
+operator|<
+name|T
+operator|>
+operator|::
+name|Type
+name|QObjectType
+expr_stmt|;
+end_typedef
+begin_expr_stmt
 name|QWeakPointer
 operator|<
-name|QObject
+name|QObjectType
 operator|>
 name|wp
 expr_stmt|;
-name|protected
+end_expr_stmt
+begin_label
+name|public
 label|:
+end_label
+begin_expr_stmt
 specifier|inline
-name|QPointerBase
-argument_list|()
-operator|:
-name|wp
+name|QPointer
 argument_list|()
 block|{ }
 specifier|inline
-name|QPointerBase
+name|QPointer
 argument_list|(
-name|QObject
+name|T
 operator|*
 name|p
 argument_list|)
@@ -62,103 +119,6 @@ argument_list|(
 argument|p
 argument_list|,
 argument|true
-argument_list|)
-block|{ }
-comment|// compiler-generated copy/move ctor/assignment operators are fine! (even though public)
-specifier|inline
-operator|~
-name|QPointerBase
-argument_list|()
-block|{ }
-specifier|inline
-name|QObject
-operator|*
-name|data
-argument_list|()
-specifier|const
-block|{
-return|return
-name|wp
-operator|.
-name|data
-argument_list|()
-return|;
-block|}
-specifier|inline
-name|void
-name|assign
-parameter_list|(
-name|QObject
-modifier|*
-name|p
-parameter_list|)
-block|{
-name|wp
-operator|.
-name|assign
-argument_list|(
-name|p
-argument_list|)
-expr_stmt|;
-block|}
-specifier|inline
-name|bool
-name|isNull
-argument_list|()
-specifier|const
-block|{
-return|return
-name|wp
-operator|.
-name|isNull
-argument_list|()
-return|;
-block|}
-specifier|inline
-name|void
-name|clear
-parameter_list|()
-block|{
-name|wp
-operator|.
-name|clear
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-end_decl_stmt
-begin_empty_stmt
-empty_stmt|;
-end_empty_stmt
-begin_expr_stmt
-name|template
-operator|<
-name|class
-name|T
-operator|>
-name|class
-name|QPointer
-operator|:
-name|private
-name|QPointerBase
-block|{
-name|public
-operator|:
-specifier|inline
-name|QPointer
-argument_list|()
-block|{ }
-specifier|inline
-name|QPointer
-argument_list|(
-name|T
-operator|*
-name|p
-argument_list|)
-operator|:
-name|QPointerBase
-argument_list|(
-argument|p
 argument_list|)
 block|{ }
 comment|// compiler-generated copy/move ctor/assignment operators are fine!
@@ -181,11 +141,18 @@ operator|*
 name|p
 operator|)
 block|{
-name|QPointerBase
-operator|::
+name|wp
+operator|.
 name|assign
 argument_list|(
+name|static_cast
+operator|<
+name|QObjectType
+operator|*
+operator|>
+operator|(
 name|p
+operator|)
 argument_list|)
 block|;
 return|return
@@ -193,6 +160,8 @@ operator|*
 name|this
 return|;
 block|}
+end_expr_stmt
+begin_expr_stmt
 specifier|inline
 name|T
 operator|*
@@ -207,8 +176,8 @@ name|T
 operator|*
 operator|>
 operator|(
-name|QPointerBase
-operator|::
+name|wp
+operator|.
 name|data
 argument_list|()
 operator|)
@@ -265,48 +234,34 @@ argument_list|()
 return|;
 block|}
 end_expr_stmt
-begin_ifdef
-ifdef|#
-directive|ifdef
-name|Q_QDOC
-end_ifdef
 begin_expr_stmt
 specifier|inline
 name|bool
 name|isNull
 argument_list|()
 specifier|const
-expr_stmt|;
+block|{
+return|return
+name|wp
+operator|.
+name|isNull
+argument_list|()
+return|;
+block|}
 end_expr_stmt
-begin_function_decl
+begin_function
 specifier|inline
 name|void
 name|clear
 parameter_list|()
-function_decl|;
-end_function_decl
-begin_else
-else|#
-directive|else
-end_else
-begin_expr_stmt
-name|using
-name|QPointerBase
-operator|::
-name|isNull
-expr_stmt|;
-end_expr_stmt
-begin_expr_stmt
-name|using
-name|QPointerBase
-operator|::
+block|{
+name|wp
+operator|.
 name|clear
+argument_list|()
 expr_stmt|;
-end_expr_stmt
-begin_endif
-endif|#
-directive|endif
-end_endif
+block|}
+end_function
 begin_expr_stmt
 unit|};
 name|template
