@@ -3619,12 +3619,17 @@ name|class
 name|QSharedPointer
 expr_stmt|;
 end_expr_stmt
-begin_decl_stmt
+begin_expr_stmt
+name|template
+operator|<
+name|class
+name|X
+operator|>
 name|friend
 name|class
-name|QPointerBase
-decl_stmt|;
-end_decl_stmt
+name|QPointer
+expr_stmt|;
+end_expr_stmt
 begin_endif
 endif|#
 directive|endif
